--- a/themes/mcgonigle-studio/pages/home.htm
+++ b/themes/mcgonigle-studio/pages/home.htm
@@ -3,5 +3,5 @@ url = "/"
 layout = "default"
 ==
 <div class="content">
-    <h1>This is just another test</h1>
+    <h1>This is just another test 3</h1>
 </div>
